Process Hacker

2.38
 * HIGHLIGHTS:
   * Added labels to indicate the maximum data point in each I/O graph
   * Graph grids now scale correctly when resized
   * Improved high DPI scaling
   * Added right-click menu and double-click action for environment variables
   * Clicking a tray icon now shows the pop-up UI (useful for touch-enabled devices)
   * The pop-up UI no longer displays when double-clicking the tray icon
   * The NetAdapters plugin has been renamed to HardwareDevices
     * This plugin shows network adapter and disk drive graphs
     * If you are manually upgrading, please delete NetAdapters.dll from the plugins folder
   * Updated UserNotes plugin:
     * Added "Collapse by Default" option for processes
 * OTHER CHANGES:
   * Added "Not responding" text to tray icon rich pop-up for programs that are hung
   * Improved performance when handling a large number of threads, modules or handles
   * Added -sysinfo command line parameter for opening System Information at startup
   * Fixed ASLR state being shown as N/A in process properties
   * Fixed multi monitor window placement bug
   * Fixed handle enumeration bug affecting processes with PID >= 65536
   * Fixed Interrupts being missing from the max CPU usage history

2.37
 * HIGHLIGHTS:
   * Updated for Windows 10
   * The "Include CPU (and other) usage of children in collapsed processes" option now aggregates memory and I/O statistics
   * Added regex search to "Find Handles or DLLs"
   * Added process exit codes to log
   * Fixed crash that occurred under some conditions when processes terminated
 * OTHER CHANGES:
   * Added warning when trying to search for handles when the system has too many handles open
   * Upgraded to PCRE2
   * Updated DotNetTools plugin:
     * Rewrite of .NET Performance statistics and AppDomain enumeration
   * Updated OnlineChecks plugin:
     * Fixed virusscan.jotti.org uploader
   * Updated NetAdapters plugin:
     * Added adapter details window