@@ -2,10 +2,11 @@ Process Hacker
 
 2.38
  * HIGHLIGHTS:
+   * Improved high DPI scaling
    * Added labels to indicate the maximum data point in each I/O graph
    * Graph grids now scale correctly when resized
-   * Improved high DPI scaling
    * Added right-click menu and double-click action for environment variables
+   * Added Time Stamp column for processes
    * Clicking a tray icon now shows the pop-up UI (useful for touch-enabled devices)
    * The pop-up UI no longer displays when double-clicking the tray icon
    * The NetAdapters plugin has been renamed to HardwareDevices
